Creado mediante Colaboratory

--- a/Pruebas_de_unidad.ipynb
+++ b/Pruebas_de_unidad.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Vbv4Q1WIzJGi"
       },
@@ -56,12 +56,12 @@
         "\n",
         "    def div(self, a, b):\n",
         "        if b != 0:\n",
-        "            return a / b-1"
+        "            return a / b"
       ],
       "metadata": {
         "id": "Bj2884KmzM0-"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -97,12 +97,19 @@
         "        self.calc = Calculator()\n",
         "        result = self.calc.div(10, 2)\n",
         "        expected = 5\n",
-        "        self.assertEqual(result, expected)"
+        "        self.assertEqual(result, expected)\n",
+        "\n",
+        "        def test_div(self):\n",
+        "          '''Test case function for division'''\n",
+        "          self.calc = Calculator()\n",
+        "          result = self.calc.div(7, 2)\n",
+        "          expected = 3\n",
+        "          self.assertEqual(result, expected)"
       ],
       "metadata": {
         "id": "BmO1ExRBzWRl"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -115,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n0oF9ToCzolJ",
-        "outputId": "b649318f-3872-4806-e2d4-6e8337dbc3c1"
+        "outputId": "f927d4f6-603e-4389-abaa-1092cdff313f"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,36 +133,27 @@
             "test_add (__main__.TestCalculator)\n",
             "Test case function for addition ... ok\n",
             "test_div (__main__.TestCalculator)\n",
-            "Test case function for division ... FAIL\n",
+            "Test case function for division ... ok\n",
             "test_mul (__main__.TestCalculator)\n",
             "Test case function for multiplication ... ok\n",
             "test_sub (__main__.TestCalculator)\n",
             "Test case function for subtraction ... ok\n",
             "\n",
-            "======================================================================\n",
-            "FAIL: test_div (__main__.TestCalculator)\n",
-            "Test case function for division\n",
             "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-3-81486f442b36>\", line 31, in test_div\n",
-            "    self.assertEqual(result, expected)\n",
-            "AssertionError: 4.0 != 5\n",
+            "Ran 4 tests in 0.014s\n",
             "\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 4 tests in 0.013s\n",
-            "\n",
-            "FAILED (failures=1)\n"
+            "OK\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x7f4d836f9950>"
+              "<unittest.main.TestProgram at 0x7f4d7fc1acd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     }
